--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-        background: #445626 }
+        background: black; }
     section {
         background: black;
         color: white;
